--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -29,7 +29,7 @@ Figure out the best possible view for the small screens.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://img.freepik.com/free-vector/detailed-travel-logo_23-2148616611.jpg?size=338&ext=jpg">
+    <link rel="icon" type="image/png" href="assets/media/hero.png">
     <title>TracKL</title>
     <link rel="stylesheet" href="assets/stylesheet/style.css">
     <script src="https://kit.fontawesome.com/17bbe460ec.js" crossorigin="anonymous"></script>
@@ -49,10 +49,10 @@ Figure out the best possible view for the small screens.
                     <label class="bars" for="toggle"><i class="fas fa-times"></i></label>
                     <input type="checkbox" id="toggle">
 
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Help</a></li>
                 </ul>
             </nav>
        </div>
@@ -91,7 +91,11 @@ Figure out the best possible view for the small screens.
                 <article class="flex_45 monitor">
                     <h2>Monitor Your learning and Improve It</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi explicabo illo modi, omnis perspiciatis ab voluptas quibusdam. Est qui sint quae maxime necessitatibus repellat nobis corporis aliquid architecto, dolore temporibus.</p>
-                    <div class="learnMore shape"><a class="LearnMore" href="">Learn More</a></div>
+                    <div class="buttonShape">
+                        <div class="before_shape"></div>
+                        <div class="learnMore shape"><a class="LearnMore" href="">Learn More</a></div>
+                        <div class="front_shape"></div>
+                    </div>
                 </article>
 
                <figure class="flex_45">
